# mtg-utils

./: .coverage  .gitignore  LICENSE  Makefile  README.md  config.json  pyproject.toml
.cline/: settings.json
.cline/memory-bank/: activeContext.md  productContext.md  progress.md  projectBrief.md  systemPatterns.md  techContext.md
.clinerules/: 01-project-overview.md  02-coding-standards.md  03-testing-standards.md  04-security-practices.md  05-cli-workflows.md  06-version-control.md  memory-bank.md
.githooks/: pre-commit
.github/: copilot-instructions.md
.github/agents/: ci-engineer.agent.md  facilitator.agent.md  mtg-library-maintainer.agent.md  mtg-orchestrator.agent.md  mtg-product-designer.agent.md  mtg-qa.agent.md  pdh-researcher.agent.md  product-designer.agent.md  qa-engineer.agent.md  software-engineer.agent.md  the-architect.agent.md
.github/skills/mtg-library-maintainer/: SKILL.md
.github/skills/run-command/: SKILL.md
.github/workflows/: ci.yml
card_library/: available_cards.txt  buylist.txt  others_bought.txt  owned_cards.txt  purchased.txt  purchased_formatted.txt
card_library/decks/: gretchen.txt  gretchen_pdc2.txt  lagrella.txt  sivriss_agent.txt  sivriss_cloakwood.txt  soulherder.txt  tatyova.txt  tormod_ramirez.txt  venomthrope.txt  weavers.txt  zada.txt
mtg_utils/: main.py
mtg_utils/commands/: check_missing_cards.py  compare_decks.py  list_decks.py  update_card_library.py
mtg_utils/utils/: cards.py  config.py  console.py  decklists.py  moxfield_api.py  panels.py  readers.py
tests/: conftest.py  test_check_missing_cards.py  test_compare_decks.py  test_config.py  test_console.py  test_list_decks.py  test_main.py  test_moxfield_api.py  test_readers.py  test_update_card_library.py
tests/test_utils/: test_cards.py  test_decklists.py  test_panels.py
(+28 files in other folders)
