[project]
name = "mtg-utils"
version = "0.1.0"
description = ""
authors = [{ name = "Simone Gasbarroni", email = "simone.gasbarroni@gmail.com" }]
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "click (>=8.2.1,<9.0.0)",
    "requests (>=2.32.4,<3.0.0)",
    "cloudscraper (>=1.2.71,<2.0.0)",
    "rich (>=14.3.3,<15.0.0)",
    "pydantic (>=2.0.0,<3.0.0)",
]

[tool.poetry.scripts]
mtg-utils = "mtg_utils.main:cli"

[tool.poetry.group.dev.dependencies]
pytest = ">=8.0.0"
pytest-cov = "^7.0.0"
ruff = "^0.15.6"
pyright = ">=1.1.0"

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = ""
markers = [
    "unit: pure logic tests, no file I/O or network mocking",
    "integration: CLI runner + filesystem + mocks",
]

[tool.coverage.run]
source = ["mtg_utils"]
omit = ["mtg_utils/__init__.py"]

[tool.coverage.report]
fail_under = 100
exclude_lines = ["pragma: no cover", "if __name__ == .__main__.:"]
exclude_also = ["# Show cards that are in the deck but not needed"]

[tool.ruff]
line-length = 120

[tool.pyright]
pythonVersion = "3.13"
typeCheckingMode = "basic"
include = ["mtg_utils"]

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
